--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".NewRepairRequestActivity"
-            android:label="@string/title_activity_repair"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity
+                android:name=".NewRepairRequestActivity"
+                android:label="@string/title_activity_repair"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".RepairActivity"
