--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,16 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
+                android:name=".NewOrderActivity"
+                android:label="@string/title_activity_new_order"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name=".OrderActivity"
+                android:label="@string/title_activity_order"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
                 android:name=".NewRepairRequestActivity"
                 android:label="@string/title_activity_repair"
                 android:theme="@style/AppTheme.NoActionBar">
